fix: block card method and tests changed
